syntax = "proto3";

message singleTransportTx {
    bytes tx = 1;
    uint32 relays = 2;
}
message transportTransactions {
    repeated singleTransportTx = 1;
}

message transportTx {
    repeated bytes buffers = 1;
}