syntax = "proto3";

message bytesTransaction {
    bytes bytes = 1;
    bool hasRequesterPublicKey = 2;
    bool hasSignSignature = 3;
    uint32 fee = 4;
    uint32 relays = 5;
    repeated bytes signatures = 6;
}
